Streamline Voyage model and improve HZPP parser
This commit streamlines Voyage model by removing unnecessary properties. Additionally, it improves HZPP parser by ensuring all the Voyage model properties are populated from the fetched report.